# gyoza

./: .readthedocs.yaml  README.md  checkpoint  deploy copy.txt  deploy.txt  example_model.h5  pyproject.toml
docs/: conf.py  gyoza.modelling.rst  gyoza.tutorials.rst  gyoza.utilities.rst  index.rst  requirements.txt
docs/images/: .$class_diagram.drawio.bkp  .$class_diagram.drawio.dtmp  class_diagram.drawio
example_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
example_model/variables/: variables.data-00000-of-00001  variables.index
experiments/: Case Study 1.mov  Low Dimensional Manifolds.ipynb
olddocs/: conf.py  gyoza.rst  modules.rst  oldreqs.txt
olddocs/images/: class_diagram.drawio
temporary_model_directory_for_additive_coupling_layer_unit_test/: fingerprint.pb  keras_metadata.pb  saved_model.pb
temporary_model_directory_for_additive_coupling_layer_unit_test/variables/: variables.data-00000-of-00001  variables.index
tensorboard_logs/train/: events.out.tfevents.1768470893.Tims-MacBook-Pro.local.22606.6.v2  events.out.tfevents.1768470900.Tims-MacBook-Pro.local.22606.7.v2  events.out.tfevents.1768471191.Tims-MacBook-Pro.local.22606.8.v2  events.out.tfevents.1768471485.Tims-MacBook-Pro.local.22606.9.v2
tutorials/: Introduction to Flow Models.ipynb  Low Dimensional Manifolds.ipynb  Tutorial 0 - Getting Started with Disentantling Flow Models.ipynb  Tutorial 1 - Linear Scaling.ipynb  Tutorial 1 - The Activation Normalization Layer.ipynb  Tutorial 2 - The Reflection Layer.ipynb  Tutorial 3 - The Coupling Layer.ipynb  Tutorial 4 - Disentangling Manifolds with Continuous Factors.ipynb  Tutorial 4 - Disentangling Spirals.ipynb  Tutorial 5 - Disentangling Manifolds with Categorical Factors.ipynb  manifolds.ipynb  music_scales.py
unit_tests/modelling/: data_iterators_test.py  (+5 more)
(+21 files in other folders)
