[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "gyoza"
version = "0.0.4"
authors = [
  { name="Tim Dick", email="timdi@icloud.com" },
]
description = "A package for invertible interpretable neural networks."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "librosa >= 0.10.0.post2",
    "tensorflow >= 2.8.2",
    "matplotlib >= 3.5.3",
    "PyWavelets >= 1.4.1",
    "sphinx == 5.2.3",
    "sphinx-rtd-theme"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"