[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "gyoza"
version = "0.2.3"
authors = [
  { name="Tim Dick" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tensorflow >= 2.9",
    "numpy >= 1.21.6",
    
]

[project.optional-dependencies]
build = [
  "build<0.10.0",
  "twine",
  "sphinx == 5.2.3",
  "sphinx-rtd-theme",
  ]
tutorials = [
  "matplotlib >= 3.5.3"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"